<resources>
    <string name="app_name">EXChallenger</string>
    <string name="workout">Workout</string>
    <string name="start">Start</string>
    <string name="relax">Relax</string>
    <string name="working">Working</string>
    <string name="relax_s">Relax: %s</string>
    <string name="work_s">Work: %s</string>
    <string name="title_time_relax">It\'s time to relax</string>
    <string name="des_time_relax">Do some workout to relax</string>
    <string name="title_time_work">Back to your work now</string>
    <string name="des_time_work">Focus on your work</string>
    <string name="cancel">Cancel</string>

    <string name="morning">Morning</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="afternoon">Afternoon</string>
    <string name="lunch_break">Lunch Break</string>
    <string name="save">Save</string>
    <string name="time_is_invalid">Time is invalid</string>
    <string name="your_data_saved">Your data is saved</string>
    <string name="tell_me_your_work_time">Tell me your work time</string>
    <string name="facebook_app_id">549797569261829</string> <string name="fb_login_protocol_scheme">fb549797569261829</string>
    <string name="rank_rat_1">Rat I</string>
    <string name="rank_rat_2">Rat II</string>
    <string name="rank_rat_3">Rat III</string>
    <string name="rank_rat_4">Rat IV</string>
    <string name="rank_buffalo_1">Buffalo I</string>
    <string name="rank_buffalo_2">Buffalo II</string>
    <string name="rank_buffalo_3">Buffalo III</string>
    <string name="rank_buffalo_4">Buffalo IV</string>
    <string name="rank_tiger_1">Tiger I</string>
    <string name="rank_tiger_2">Tiger II</string>
    <string name="rank_tiger_3">Tiger III</string>
    <string name="rank_tiger_4">Tiger IV</string>
    <string name="rank_dragon_1">Dragon I</string>
    <string name="rank_dragon_2">Dragon II</string>
    <string name="rank_dragon_3">Dragon III</string>
    <string name="rank_dragon_4">Dragon IV</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_text" ><font color='#3B58FC'>EX</font>Challenge</string>

    <string name="tfe_pn_app_name" translation_description="Posenet demo app built with Posenet library [CHAR_LIMIT=40]">TFL Posenet</string>
    <string name="tfe_pn_request_permission" translation_description="Request camera permission [CHAR_LIMIT=40]">This app needs camera permission.</string>
    <string name="tfe_pn_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="stop">Stop</string>
    <string name="outside_office_hours">Outside office hours</string>
    <string name="empty_group" >You haven\'t joined any groups yet\nCreate a new group or join one</string>
    <string name="unavailable_feature">This feature is not available now. Please come back later.</string>

</resources>
