<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".WFHDemoActivity">


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/working"
        android:textColor="#222222"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.exchallenger.customviews.CircleProgressView
        android:id="@+id/circle_progress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <TextView
        android:id="@+id/txt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_start_wfh"
        android:drawableStart="@drawable/ic_start"
        android:drawablePadding="15dp"
        android:paddingStart="30dp"
        android:paddingTop="15dp"
        android:paddingEnd="30dp"
        android:paddingBottom="13dp"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/circle_progress" />

    <TextView
        android:id="@+id/txt_current_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_current_view_wfh"
        android:drawablePadding="15dp"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="13dp"
        android:text="Relax: 5 mins"
        android:textColor="@color/color_wfh"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/txt_start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textColor="#222222"
        android:textSize="31sp"
        app:layout_constraintBottom_toBottomOf="@+id/circle_progress"
        app:layout_constraintEnd_toEndOf="@+id/circle_progress"
        app:layout_constraintStart_toStartOf="@+id/circle_progress"
        app:layout_constraintTop_toTopOf="@+id/circle_progress" />

    <TextView
        android:id="@+id/txt_work_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/tell_me_your_work_time"
        android:textColor="@color/color_wfh"
        app:layout_constraintBottom_toTopOf="@+id/txt_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_progress" />
</androidx.constraintlayout.widget.ConstraintLayout>